# libyaplog

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog.md  Makefile.am  Makefile.common  NEWS.md  README.md  bootstrap.sh  configure.pre  cppcheck  version.sh
doc/: Doxyfile.in  Makefile.am  document.h.in
samples/: custom.cpp  sample.cpp
src/: Makefile.am  yaplog.cpp  yaplog.h  yaplog.pc.in
src/yaplog/: Makefile.am  color.h  conf.cpp  conf.h  dump.cpp  dump.h  internallog.cpp  internallog.h  level.h  loglocation.h
utests/: Makefile.am  Makefile.test.common  main.cpp  ut_conf.h  ut_dump.h  ut_libyaplog.h
utests/fixtures/: Makefile.am  exposed_conf.h  fixtures.h
